--- a/themes/hugo-agency-web/layouts/_partials/blocks/home/hero.html
+++ b/themes/hugo-agency-web/layouts/_partials/blocks/home/hero.html
@@ -8,12 +8,24 @@
   <div class="container mx-auto px-4">
     <div class="grid xl:grid-cols-2 gap-8 mb-24">
       <div class="flex flex-col justify-center gap-4">
+
+        {{ if .importantTitle }}
+        <div class="container ">
+          <a class="flex items-center" href="{{ .importantLink }}">
+            <span class="text-primary text-2xl font-semibold xl:text-2xl">{{ .importantTitle }}</span>
+          </a>
+          <h2 class="text-xl font-medium text-center xl:text-start">{{ .importantText }}</h2>
+          <br />
+        </div>
+        {{ end }}
+
         {{ with .title }}
           <h1 class="markdown-title text-center xl:text-start text-4xl xl:text-5xl font-semibold xl:leading-normal">{{ . | markdownify }}</h1>
         {{ end }}
         {{ with .text }}
         <p class="xl:leading-loose text-center xl:text-start text-[#5C5C5C]">{{ . }}</p>
         {{ end }}
+
         {{ if .buttons }}
           <div class="flex items-center flex-col xl:flex-row gap-4 mt-8">
             {{ range $i, $e := .buttons }}
